@@ -16,6 +16,15 @@ Corrections:
 	The retry option with some address types (TCP) did not close() the
 	sockets after failed attempts, resulting in an FD leak.
 
+	Filan: Corrected some syntax error messages
+
+	Filan: Fixed a bug introduces in 1.7.4.4 that broke displaying
+	TCP/UDP on options -s, -S
+	Test: FILAN_SHORT_TCP
+
+	Filan: If IP protocol type cannot be retrieved, display at least the
+	socket type
+
 Coding:
 	New Environment variable SOCAT_TRANSFER_WAIT that Socat sleep before
 	starting the data transfer loop. Useful, e.g., to accumulate multiple
